--- a/about.html
+++ b/about.html
@@ -3,52 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About — Your Name</title>
+  <title>About | Your Name</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-<nav>
-  <div class="container nav-inner">
-    <div class="brand"><a href="index.html">Your Name</a></div>
-    <ul class="nav-links">
-      <li><a href="index.html">Index</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="resume.html">Resume</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </div>
-</nav>
+<header class="navbar">
+  <div class="logo">YourName</div>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="resume.html">Resume</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
-<main class="container page">
-  <h1>About</h1>
-  <p class="lead">
-    Write 4–8 lines that sound like you: what you do, why you do it, and what kind of work you’re proud of.
-  </p>
+<section class="hero">
+  <h1>About Me</h1>
+  <p>I’m passionate about AI, machine learning, and building meaningful systems.</p>
+</section>
 
-  <h2>What I do</h2>
-  <p>
-    I help teams make better decisions using data — from framing the question, to building dashboards/models, to communicating results in plain language.
-  </p>
-
-  <h2>How I work</h2>
-  <p>
-    Simple systems, clear communication, and measurable outcomes. I focus on what matters, ship iteratively, and document so work scales.
-  </p>
-
-  <h2>Interests</h2>
-  <div class="badges">
-    <span class="badge">Analytics</span>
-    <span class="badge">Product thinking</span>
-    <span class="badge">Writing</span>
-    <span class="badge">Design systems</span>
-  </div>
-</main>
-
-<footer>
-  <div class="container">© 2026 Your Name</div>
-</footer>
-
-<script src="script.js"></script>
 </body>
 </html>
