--- a/index.html
+++ b/index.html
@@ -3,76 +3,51 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name</title>
+
+  <title>Your Name | AI & ML Enthusiast</title>
+  <meta name="description" content="AI & ML Enthusiast. Builder. Problem Solver." />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Your Name | Portfolio" />
+  <meta property="og:description" content="Turning ideas into intelligent systems." />
+  <meta property="og:type" content="website" />
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
-<nav>
-  <div class="container nav-inner">
-    <div class="brand"><a href="index.html">Your Name</a></div>
-    <ul class="nav-links">
-      <li><a href="index.html">Index</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="resume.html">Resume</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </div>
-</nav>
+  <!-- NAVBAR -->
+  <header class="navbar">
+    <div class="logo">YourName</div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="resume.html">Resume</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
-<main class="container page">
-  <h1>Hello.</h1>
-  <p class="lead">
-    I work at the intersection of data, technology, and strategy — turning complex information into clear decisions and measurable impact.
-  </p>
+  <!-- HERO -->
+  <section class="hero">
+    <h1>AI & ML Enthusiast</h1>
+    <p>Visionary. Builder. Problem-Solver.</p>
+    <div class="hero-buttons">
+      <a href="about.html" class="btn primary">About Me</a>
+      <a href="contact.html" class="btn secondary">Contact</a>
+    </div>
+  </section>
 
-  <div class="kicker">Based in Oman • Available for collaboration</div>
+  <!-- FOOTER -->
+  <footer>
+    <p>© 2026 Your Name. All rights reserved.</p>
+  </footer>
 
-  <div class="btn-row">
-    <a class="btn primary" href="resume.html">View Resume</a>
-    <a class="btn" href="contact.html">Contact</a>
-    <a class="btn" href="about.html">Read About</a>
-  </div>
-
-  <hr />
-
-  <div class="grid-2">
-    <section class="card">
-      <h2>Focus</h2>
-      <p>
-        Data strategy, analytics, and building practical systems that help teams move faster with confidence.
-      </p>
-      <div class="badges">
-        <span class="badge">Data & Analytics</span>
-        <span class="badge">Strategy</span>
-        <span class="badge">Business Value</span>
-        <span class="badge">Automation</span>
-      </div>
-    </section>
-
-    <aside class="card">
-      <h2>Now</h2>
-      <p class="small">
-        Replace this with a short “currently” note — what you’re working on, learning, or exploring.
-      </p>
-      <div class="list">
-        <div class="list-item">
-          <strong>Current</strong>
-          <p class="small">Building a personal knowledge base for projects and notes.</p>
-        </div>
-        <div class="list-item">
-          <strong>Learning</strong>
-          <p class="small">Experimenting with modern web performance + SEO basics.</p>
-        </div>
-      </div>
-    </aside>
-  </div>
-</main>
-
-<footer>
-  <div class="container">© 2026 Your Name</div>
-</footer>
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
