--- a/index.html
+++ b/index.html
@@ -1,53 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <title>Your Name | AI & ML Enthusiast</title>
-  <meta name="description" content="AI & ML Enthusiast. Builder. Problem Solver." />
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="Your Name | Portfolio" />
-  <meta property="og:description" content="Turning ideas into intelligent systems." />
-  <meta property="og:type" content="website" />
-
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="style.css" />
-</head>
-
-<body>
-
-  <!-- NAVBAR -->
-  <header class="navbar">
-    <div class="logo">YourName</div>
+<header>
+  <div class="navbar">
+    <div class="logo">Your Name</div>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="active">Index</a>
       <a href="about.html">About</a>
       <a href="resume.html">Resume</a>
       <a href="contact.html">Contact</a>
     </nav>
-  </header>
+  </div>
+</header>
 
-  <!-- HERO -->
-  <section class="hero">
-    <h1>AI & ML Enthusiast</h1>
-    <p>Visionary. Builder. Problem-Solver.</p>
-    <div class="hero-buttons">
-      <a href="about.html" class="btn primary">About Me</a>
-      <a href="contact.html" class="btn secondary">Contact</a>
-    </div>
-  </section>
+<main class="container hero">
+  <h1>Hello.</h1>
+  <p>
+    I work at the intersection of data, technology, and strategy — turning
+    complex information into clear decisions and measurable impact.
+  </p>
 
-  <!-- FOOTER -->
-  <footer>
-    <p>© 2026 Your Name. All rights reserved.</p>
-  </footer>
+  <span class="pill">Based in Oman • Available for collaboration</span>
 
-  <script src="script.js"></script>
-</body>
-</html>
+  <div class="actions">
+    <a href="resume.html" class="btn primary">View Resume</a>
+    <a href="contact.html" class="btn secondary">Contact</a>
+    <a href="about.html" class="btn secondary">Read About</a>
+  </div>
+</main>
