--- a/about.html
+++ b/about.html
@@ -1,27 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About | Your Name</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-
-<header class="navbar">
-  <div class="logo">YourName</div>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="resume.html">Resume</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+<header>
+  <div class="navbar">
+    <div class="logo">Your Name</div>
+    <nav>
+      <a href="index.html">Index</a>
+      <a href="about.html" class="active">About</a>
+      <a href="resume.html">Resume</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
 </header>
 
-<section class="hero">
-  <h1>About Me</h1>
-  <p>I’m passionate about AI, machine learning, and building meaningful systems.</p>
-</section>
-
-</body>
-</html>
+<main class="container">
+  <section class="hero">
+    <h1>About Me</h1>
+    <p>I’m passionate about AI, machine learning, and building meaningful systems.</p>
+  </section>
+</main>
