--- a/index.html
+++ b/index.html
@@ -1,27 +1,60 @@
-<header>
-  <div class="navbar">
-    <div class="logo">Your Name</div>
-    <nav>
-      <a href="index.html" class="active">Index</a>
-      <a href="about.html">About</a>
-      <a href="resume.html">Resume</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </div>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Muayad Al Abduwani</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <nav>
+    <div class="logo">Muayad Al Abduwani <span>• Entrepreneur</span></div>
+    <ul>
+      <li><a class="active" href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="achievements.html">Achievements</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+    <div class="theme-toggle">🌙</div>
+  </nav>
 
-<main class="container hero">
-  <h1>Hello.</h1>
-  <p>
-    I work at the intersection of data, technology, and strategy — turning
-    complex information into clear decisions and measurable impact.
-  </p>
+  <main class="hero">
+    <div class="orbit"></div>
 
-  <span class="pill">Based in Oman • Available for collaboration</span>
+    <h1>
+      <span class="accent">Build.</span>
+      <span class="light">Evolve.</span>
+    </h1>
 
-  <div class="actions">
-    <a href="resume.html" class="btn primary">View Resume</a>
-    <a href="contact.html" class="btn secondary">Contact</a>
-    <a href="about.html" class="btn secondary">Read About</a>
-  </div>
-</main>
+    <p class="subtitle">
+      Start now — let’s connect and grow.
+    </p>
+
+    <div class="buttons">
+      <a href="assets/resume.pdf" class="btn primary" download>View Resume</a>
+      <a href="contact.html" class="btn secondary">Contact Me</a>
+    </div>
+
+    <div class="tags">
+      <span>Data Science</span>
+      <span>AI Engineer</span>
+      <span>AI Developer</span>
+      <span>Power BI</span>
+      <span>Canva</span>
+      <span>Machine Learning</span>
+      <span>Python</span>
+      <span>SQL</span>
+    </div>
+  </main>
+
+  <footer>
+    <p>© 2026 Muayad Al Abduwani</p>
+    <div class="socials">
+      <span class="placeholder">LinkedIn</span>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
