--- a/about.html
+++ b/about.html
@@ -1,18 +1,43 @@
-<header>
-  <div class="navbar">
-    <div class="logo">Your Name</div>
-    <nav>
-      <a href="index.html">Index</a>
-      <a href="about.html" class="active">About</a>
-      <a href="resume.html">Resume</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </div>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>About | Muayad Al Abduwani</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <nav>
+    <div class="logo">Muayad Al Abduwani</div>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a class="active" href="about.html">About</a></li>
+      <li><a href="achievements.html">Achievements</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 
-<main class="container">
-  <section class="hero">
-    <h1>About Me</h1>
-    <p>I’m passionate about AI, machine learning, and building meaningful systems.</p>
+  <section class="page">
+    <h2>About Me</h2>
+    <p>
+      I am a Computer Science student with a strong interest in artificial intelligence,
+      data-driven systems, and entrepreneurship. I enjoy building practical solutions
+      that connect technology with real-world impact.
+    </p>
+
+    <p>
+      Alongside my academic journey, I serve as the Head of the Sports Committee at the
+      Omani Students Society in Cardiff, where I lead initiatives that promote teamwork,
+      leadership, and community engagement.
+    </p>
+
+    <p>
+      I am also a crypto enthusiast, actively exploring blockchain technologies,
+      decentralized systems, and the future of digital assets.
+    </p>
   </section>
-</main>
+
+  <footer>© 2026 Muayad Al Abduwani</footer>
+</body>
+</html>
