--- a/resume.html
+++ b/resume.html
@@ -2,71 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <title>Resume</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Resume — Your Name</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-<nav>
-  <div class="container nav-inner">
-    <div class="brand"><a href="index.html">Your Name</a></div>
-    <ul class="nav-links">
-      <li><a href="index.html">Index</a></li>
+  <nav>
+    <div class="logo">Muayad Al Abduwani</div>
+    <ul>
+      <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
-      <li><a href="resume.html">Resume</a></li>
+      <li><a href="achievements.html">Achievements</a></li>
+      <li><a class="active" href="resume.html">Resume</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
-  </div>
-</nav>
+  </nav>
 
-<main class="container page">
-  <h1>Resume</h1>
-  <p class="lead">A concise overview. Replace placeholders with your real roles, dates, and outcomes.</p>
+  <section class="page center">
+    <h2>Resume</h2>
+    <p>Download my resume for full academic and professional details.</p>
+    <a href="assets/resume.pdf" class="btn primary" download>Download Resume (PDF)</a>
+  </section>
 
-  <div class="btn-row">
-    <!-- Optional: replace resume.pdf once you add it -->
-    <a class="btn primary" href="#" onclick="alert('Add your resume.pdf to this folder and link it here.'); return false;">
-      Download PDF
-    </a>
-  </div>
-
-  <h2>Experience</h2>
-  <div class="card list">
-    <div class="list-item">
-      <strong>Job Title — Company</strong>
-      <p class="small">2023 — Present • Location</p>
-      <p class="small">Impact bullet: increased revenue / reduced costs / improved decision speed, etc.</p>
-    </div>
-    <div class="list-item">
-      <strong>Previous Role — Company</strong>
-      <p class="small">2020 — 2023 • Location</p>
-      <p class="small">Impact bullet: built dashboards, automated reporting, launched new data products.</p>
-    </div>
-  </div>
-
-  <h2>Education</h2>
-  <div class="card list">
-    <div class="list-item">
-      <strong>Degree — University</strong>
-      <p class="small">Year • Field / Notes</p>
-    </div>
-  </div>
-
-  <h2>Skills</h2>
-  <div class="badges">
-    <span class="badge">SQL</span>
-    <span class="badge">Python</span>
-    <span class="badge">Data Strategy</span>
-    <span class="badge">BI</span>
-    <span class="badge">Storytelling</span>
-  </div>
-</main>
-
-<footer>
-  <div class="container">© 2026 Your Name</div>
-</footer>
-
-<script src="script.js"></script>
+  <footer>© 2026 Muayad Al Abduwani</footer>
 </body>
 </html>
