--- a/contact.html
+++ b/contact.html
@@ -2,26 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <title>Contact</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact | Your Name</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-<header class="navbar">
-  <div class="logo">YourName</div>
   <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="resume.html">Resume</a>
-    <a href="contact.html">Contact</a>
+    <div class="logo">Muayad Al Abduwani</div>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="achievements.html">Achievements</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a class="active" href="contact.html">Contact</a></li>
+    </ul>
   </nav>
-</header>
 
-<section class="hero">
-  <h1>Contact</h1>
-  <p>Email: your@email.com</p>
-</section>
+  <section class="page center">
+    <h2>Contact Me</h2>
+    <p>📍 Oman</p>
+    <p>📧 muayadabduwani@gmail.com</p>
+  </section>
 
+  <footer>© 2026 Muayad Al Abduwani</footer>
 </body>
 </html>
