--- a/index.html
+++ b/index.html
@@ -10,88 +10,103 @@
 <body>
   <!-- NAV -->
   <nav>
-    <div class="logo">Muayad Al Abduwani <span>• Entrepreneur</span></div>
-    <ul>
-      <li><a href="#home" class="active">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#achievements">Achievements</a></li>
-      <li><a href="#resume">Resume</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
+    <div class="nav-inner">
+      <div class="logo">Muayad Al Abduwani <span>• Entrepreneur</span></div>
+      <ul>
+        <li><a href="#home" class="active">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#achievements">Achievements</a></li>
+        <li><a href="#resume">Resume</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
   </nav>
 
-  <!-- BACKGROUND FX -->
+  <!-- BACKGROUND -->
   <canvas id="bg"></canvas>
 
   <!-- HOME -->
   <section id="home" class="hero">
-    <h1><span>Build.</span> Evolve.</h1>
-    <p>Start now — let’s connect and grow.</p>
+    <div class="container">
+      <h1><span>Build.</span> Evolve.</h1>
+      <p class="subtitle">Start now — let’s connect and grow.</p>
 
-    <div class="buttons">
-      <a href="assets/resume.pdf" download class="btn primary">View Resume</a>
-      <a href="#contact" class="btn outline">Contact Me</a>
-    </div>
+      <div class="buttons">
+        <a href="assets/resume.pdf" download class="btn primary">View Resume</a>
+        <a href="#contact" class="btn outline">Contact Me</a>
+      </div>
 
-    <div class="tags">
-      <span>Data Science</span>
-      <span>AI Engineer</span>
-      <span>AI Developer</span>
-      <span>Power BI</span>
-      <span>Canva</span>
-      <span>Machine Learning</span>
-      <span>Python</span>
-      <span>SQL</span>
+      <div class="tags">
+        <span>Data Science</span>
+        <span>AI Engineer</span>
+        <span>AI Developer</span>
+        <span>Power BI</span>
+        <span>Canva</span>
+        <span>Machine Learning</span>
+        <span>Python</span>
+        <span>SQL</span>
+      </div>
     </div>
   </section>
 
   <!-- ABOUT -->
   <section id="about" class="section">
-    <h2>About</h2>
-    <p>
-      I am a Computer Science student with a strong interest in artificial intelligence,
-      data-driven systems, and entrepreneurship.
-    </p>
-    <p>
-      I serve as Head of the Sports Committee at the Omani Students Society in Cardiff,
-      leading initiatives that promote leadership and collaboration.
-    </p>
-    <p>
-      I am also a crypto enthusiast exploring blockchain technologies and decentralized systems.
-    </p>
+    <div class="container narrow">
+      <h2>About</h2>
+      <p>
+        I am a Computer Science student with a strong interest in artificial intelligence,
+        data-driven systems, and entrepreneurship.
+      </p>
+      <p>
+        I serve as Head of the Sports Committee at the Omani Students Society in Cardiff,
+        leading initiatives that promote leadership, teamwork, and community engagement.
+      </p>
+      <p>
+        I am also a crypto enthusiast exploring blockchain technologies and decentralized systems.
+      </p>
+    </div>
   </section>
 
   <!-- ACHIEVEMENTS -->
-  <section id="achievements" class="section grid">
-    <h2>Achievements</h2>
-    <div class="card">IGCSE Certificate</div>
-    <div class="card">IB Diploma</div>
-    <div class="card">IELTS Certificate</div>
-    <div class="card">Omantel – Certification of Completion</div>
-    <div class="card">Oman Data Park – Certification</div>
-    <div class="card">Oman Data Park – Certification (2)</div>
-    <div class="card">ORKI AI Certification</div>
+  <section id="achievements" class="section">
+    <div class="container">
+      <h2>Achievements</h2>
+      <div class="grid">
+        <div class="card">IGCSE Certificate</div>
+        <div class="card">IB Diploma</div>
+        <div class="card">IELTS Certificate</div>
+        <div class="card">Omantel — Certification of Completion</div>
+        <div class="card">Oman Data Park — Certification</div>
+        <div class="card">Oman Data Park — Certification (2)</div>
+        <div class="card">ORKI AI Certification</div>
+      </div>
+    </div>
   </section>
 
   <!-- RESUME -->
-  <section id="resume" class="section center">
-    <h2>Resume</h2>
-    <p>Download my resume for full academic and professional details.</p>
-    <a href="assets/resume.pdf" download class="btn primary">Download Resume</a>
+  <section id="resume" class="section">
+    <div class="container narrow center">
+      <h2>Resume</h2>
+      <p>Download my resume for full academic and professional details.</p>
+      <a href="assets/resume.pdf" download class="btn primary">Download Resume</a>
+    </div>
   </section>
 
   <!-- CONTACT -->
-  <section id="contact" class="section center">
-    <h2>Contact</h2>
-    <p>📍 Oman · 📧 muayadabduwani@gmail.com</p>
+  <section id="contact" class="section">
+    <div class="container narrow center">
+      <h2>Contact</h2>
+      <p class="muted">📍 Oman · 📧 muayadabduwani@gmail.com</p>
 
-    <!-- WORKING FORM -->
-    <form action="https://formspree.io/f/xwkgqgvy" method="POST" class="form">
-      <input type="text" name="name" placeholder="Your name" required />
-      <input type="email" name="email" placeholder="Your email" required />
-      <textarea name="message" placeholder="How can I help?" required></textarea>
-      <button type="submit" class="btn primary">Send Message</button>
-    </form>
+      <form class="form"
+        action="https://formspree.io/f/xwkgqgvy"
+        method="POST">
+        <input type="text" name="name" placeholder="Your name" required>
+        <input type="email" name="email" placeholder="Your email" required>
+        <textarea name="message" placeholder="How can I help?" required></textarea>
+        <button type="submit" class="btn primary">Send Message</button>
+      </form>
+    </div>
   </section>
 
   <footer>
