--- a/index.html
+++ b/index.html
@@ -8,111 +8,158 @@
 </head>
 
 <body>
-  <!-- NAV -->
-  <nav>
-    <div class="nav-inner">
-      <div class="logo">Muayad Al Abduwani <span>• Entrepreneur</span></div>
-      <ul>
-        <li><a href="#home" class="active">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#achievements">Achievements</a></li>
-        <li><a href="#resume">Resume</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
+
+<nav>
+  <div class="nav-inner">
+    <div class="logo">
+      Muayad Al Abduwani <span>• Entrepreneur</span>
     </div>
-  </nav>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#achievements">Achievements</a></li>
+      <li><a href="#resume">Resume</a></li>
+      <li>
+        <a href="https://www.linkedin.com/in/muayad-al-abduwani-b182b7265"
+           target="_blank" rel="noopener noreferrer">
+          LinkedIn
+        </a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
-  <!-- BACKGROUND -->
-  <canvas id="bg"></canvas>
+<!-- HOME -->
+<section id="home" class="hero">
+  <div class="container center">
+    <h1><span>Build.</span> Evolve.</h1>
+    <p class="subtitle">Start now — let’s connect and grow.</p>
 
-  <!-- HOME -->
-  <section id="home" class="hero">
-    <div class="container">
-      <h1><span>Build.</span> Evolve.</h1>
-      <p class="subtitle">Start now — let’s connect and grow.</p>
-
-      <div class="buttons">
-        <a href="assets/resume.pdf" download class="btn primary">View Resume</a>
-        <a href="#contact" class="btn outline">Contact Me</a>
-      </div>
-
-      <div class="tags">
-        <span>Data Science</span>
-        <span>AI Engineer</span>
-        <span>AI Developer</span>
-        <span>Power BI</span>
-        <span>Canva</span>
-        <span>Machine Learning</span>
-        <span>Python</span>
-        <span>SQL</span>
-      </div>
+    <div class="buttons">
+      <a href="assets/resume.pdf" download class="btn primary">View Resume</a>
+      <a href="#contact" class="btn outline">Contact Me</a>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- ABOUT -->
-  <section id="about" class="section">
-    <div class="container narrow">
+<!-- ABOUT -->
+<section id="about" class="section">
+  <div class="container narrow about-layout">
+
+    <div class="about-image">
+      <img src="assets/profile.jpg" alt="Muayad Al Abduwani">
+    </div>
+
+    <div class="about-text">
       <h2>About</h2>
+
       <p>
         I am a Computer Science student with a strong interest in artificial intelligence,
         data-driven systems, and entrepreneurship.
       </p>
+
       <p>
-        I serve as Head of the Sports Committee at the Omani Students Society in Cardiff,
+        I served as Head of the Sports Committee at the Omani Students Society in Cardiff,
         leading initiatives that promote leadership, teamwork, and community engagement.
       </p>
+
       <p>
         I am also a crypto enthusiast exploring blockchain technologies and decentralized systems.
+        I was awarded <strong>Icons Oman 2025</strong> for being a
+        <strong>Digital Content Creator</strong>.
       </p>
     </div>
-  </section>
 
-  <!-- ACHIEVEMENTS -->
-  <section id="achievements" class="section">
-    <div class="container">
-      <h2>Achievements</h2>
-      <div class="grid">
-        <div class="card">IGCSE Certificate</div>
-        <div class="card">IB Diploma</div>
-        <div class="card">IELTS Certificate</div>
-        <div class="card">Omantel — Certification of Completion</div>
-        <div class="card">Oman Data Park — Certification</div>
-        <div class="card">Oman Data Park — Certification (2)</div>
-        <div class="card">ORKI AI Certification</div>
+  </div>
+</section>
+
+<!-- ACHIEVEMENTS -->
+<section id="achievements" class="section">
+  <div class="container">
+    <h2>Achievements & Certifications</h2>
+
+    <div class="achievements-grid">
+
+      <div class="achievement-card">
+        <h3>IGCSE</h3>
+        <p>Certification of Completion</p>
+        <span>2019 – 2021</span>
       </div>
+
+      <div class="achievement-card">
+        <h3>IB Diploma</h3>
+        <p>Certification of Completion</p>
+        <span>2021 – 2023</span>
+      </div>
+
+      <div class="achievement-card">
+        <h3>IELTS</h3>
+        <p>Certification of Completion</p>
+        <span>2023</span>
+      </div>
+
+      <div class="achievement-card">
+        <h3>Omantel</h3>
+        <p>Certification of Completion</p>
+        <span>2024</span>
+      </div>
+
+      <div class="achievement-card">
+        <h3>Oman Data Park (ODP)</h3>
+        <p>Certification of Completion</p>
+        <span>2025</span>
+      </div>
+
+      <div class="achievement-card">
+        <h3>Oman Data Park (ODP)</h3>
+        <p>Certification of Completion</p>
+        <span>2025</span>
+      </div>
+
+      <div class="achievement-card">
+        <h3>ORKI AI</h3>
+        <p>Certification of Completion</p>
+        <span>2025</span>
+      </div>
+
+      <div class="achievement-card highlight">
+        <h3>Icons Oman</h3>
+        <p>Digital Content Creator Award</p>
+        <span>2025</span>
+      </div>
+
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- RESUME -->
-  <section id="resume" class="section">
-    <div class="container narrow center">
-      <h2>Resume</h2>
-      <p>Download my resume for full academic and professional details.</p>
-      <a href="assets/resume.pdf" download class="btn primary">Download Resume</a>
-    </div>
-  </section>
+<!-- RESUME -->
+<section id="resume" class="section center">
+  <div class="container narrow">
+    <h2>Resume</h2>
+    <p>Download my resume for full academic and professional details.</p>
+    <a href="assets/resume.pdf" download class="btn primary">Download Resume</a>
+  </div>
+</section>
 
-  <!-- CONTACT -->
-  <section id="contact" class="section">
-    <div class="container narrow center">
-      <h2>Contact</h2>
-      <p class="muted">📍 Oman · 📧 muayadabduwani@gmail.com</p>
+<!-- CONTACT -->
+<section id="contact" class="section center">
+  <div class="container narrow">
+    <h2>Contact</h2>
+    <p class="muted">
+      📍 Oman ·
+      <a href="mailto:muayadabduwani@gmail.com">muayadabduwani@gmail.com</a>
+    </p>
+  </div>
+</section>
 
-      <form class="form"
-        action="https://formspree.io/f/xwkgqgvy"
-        method="POST">
-        <input type="text" name="name" placeholder="Your name" required>
-        <input type="email" name="email" placeholder="Your email" required>
-        <textarea name="message" placeholder="How can I help?" required></textarea>
-        <button type="submit" class="btn primary">Send Message</button>
-      </form>
-    </div>
-  </section>
+<footer>
+  © 2026 Muayad Al Abduwani ·
+  <a href="https://www.linkedin.com/in/muayad-al-abduwani-b182b7265"
+     target="_blank" rel="noopener noreferrer">
+    LinkedIn
+  </a>
+</footer>
 
-  <footer>
-    © 2026 Muayad Al Abduwani · LinkedIn
-  </footer>
-
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
