--- a/index.html
+++ b/index.html
@@ -1,165 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Muayad Al Abduwani</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="style.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <nav>
-  <div class="nav-inner">
-    <div class="logo">
-      Muayad Al Abduwani <span>• Entrepreneur</span>
-    </div>
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#achievements">Achievements</a></li>
-      <li><a href="#resume">Resume</a></li>
-      <li>
-        <a href="https://www.linkedin.com/in/muayad-al-abduwani-b182b7265"
-           target="_blank" rel="noopener noreferrer">
-          LinkedIn
-        </a>
-      </li>
-    </ul>
+  <strong>Muayad Al Abduwani • Entrepreneur</strong>
+  <div>
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#achievements">Achievements</a>
+    <a href="#resume">Resume</a>
+    <a href="https://www.linkedin.com/in/muayad-al-abduwani-b182b7265" target="_blank">LinkedIn</a>
   </div>
 </nav>
 
-<!-- HOME -->
-<section id="home" class="hero">
-  <div class="container center">
-    <h1><span>Build.</span> Evolve.</h1>
-    <p class="subtitle">Start now — let’s connect and grow.</p>
-
-    <div class="buttons">
-      <a href="assets/resume.pdf" download class="btn primary">View Resume</a>
-      <a href="#contact" class="btn outline">Contact Me</a>
-    </div>
-  </div>
+<section id="home">
+  <h1><span>Build.</span> Evolve.</h1>
+  <p>Start now — let’s connect and grow.</p>
+  <a class="btn" href="assets/resume.pdf" download>View Resume</a>
 </section>
 
-<!-- ABOUT -->
-<section id="about" class="section">
-  <div class="container narrow about-layout">
-
-    <div class="about-image">
-      <img src="assets/profile.jpg" alt="Muayad Al Abduwani">
-    </div>
-
-    <div class="about-text">
-      <h2>About</h2>
-
-      <p>
-        I am a Computer Science student with a strong interest in artificial intelligence,
-        data-driven systems, and entrepreneurship.
-      </p>
-
-      <p>
-        I served as Head of the Sports Committee at the Omani Students Society in Cardiff,
-        leading initiatives that promote leadership, teamwork, and community engagement.
-      </p>
-
-      <p>
-        I am also a crypto enthusiast exploring blockchain technologies and decentralized systems.
-        I was awarded <strong>Icons Oman 2025</strong> for being a
-        <strong>Digital Content Creator</strong>.
-      </p>
-    </div>
-
-  </div>
+<section id="about">
+  <h2>About</h2>
+  <img src="assets/profile.jpg" alt="Profile" class="profile">
+  <p>
+    I am a Computer Science student with a strong interest in artificial intelligence,
+    data-driven systems, and entrepreneurship.
+  </p>
+  <p>
+    I served as Head of the Sports Committee at the Omani Students Society in Cardiff,
+    leading initiatives that promote leadership, teamwork, and community engagement.
+  </p>
+  <p>
+    I am also a crypto enthusiast exploring blockchain technologies and decentralized systems.
+    I was awarded <strong>Icons Oman 2025</strong> for being a
+    <strong>Digital Content Creator</strong>.
+  </p>
 </section>
 
-<!-- ACHIEVEMENTS -->
-<section id="achievements" class="section">
-  <div class="container">
-    <h2>Achievements & Certifications</h2>
-
-    <div class="achievements-grid">
-
-      <div class="achievement-card">
-        <h3>IGCSE</h3>
-        <p>Certification of Completion</p>
-        <span>2019 – 2021</span>
-      </div>
-
-      <div class="achievement-card">
-        <h3>IB Diploma</h3>
-        <p>Certification of Completion</p>
-        <span>2021 – 2023</span>
-      </div>
-
-      <div class="achievement-card">
-        <h3>IELTS</h3>
-        <p>Certification of Completion</p>
-        <span>2023</span>
-      </div>
-
-      <div class="achievement-card">
-        <h3>Omantel</h3>
-        <p>Certification of Completion</p>
-        <span>2024</span>
-      </div>
-
-      <div class="achievement-card">
-        <h3>Oman Data Park (ODP)</h3>
-        <p>Certification of Completion</p>
-        <span>2025</span>
-      </div>
-
-      <div class="achievement-card">
-        <h3>Oman Data Park (ODP)</h3>
-        <p>Certification of Completion</p>
-        <span>2025</span>
-      </div>
-
-      <div class="achievement-card">
-        <h3>ORKI AI</h3>
-        <p>Certification of Completion</p>
-        <span>2025</span>
-      </div>
-
-      <div class="achievement-card highlight">
-        <h3>Icons Oman</h3>
-        <p>Digital Content Creator Award</p>
-        <span>2025</span>
-      </div>
-
-    </div>
-  </div>
-</section>
-
-<!-- RESUME -->
-<section id="resume" class="section center">
-  <div class="container narrow">
-    <h2>Resume</h2>
-    <p>Download my resume for full academic and professional details.</p>
-    <a href="assets/resume.pdf" download class="btn primary">Download Resume</a>
-  </div>
-</section>
-
-<!-- CONTACT -->
-<section id="contact" class="section center">
-  <div class="container narrow">
-    <h2>Contact</h2>
-    <p class="muted">
-      📍 Oman ·
-      <a href="mailto:muayadabduwani@gmail.com">muayadabduwani@gmail.com</a>
-    </p>
-  </div>
-</section>
-
-<footer>
-  © 2026 Muayad Al Abduwani ·
-  <a href="https://www.linkedin.com/in/muayad-al-abduwani-b182b7265"
-     target="_blank" rel="noopener noreferrer">
-    LinkedIn
-  </a>
-</footer>
-
-<script src="script.js"></script>
-</body>
-</html>
+<section id="achievements">
+  <h2>Achievements & Certifications</h2>
+  <ul>
+    <li>IGCSE — Certification of Completion (2019–2021)</li>
+    <li>IB Diploma — Certification of Completion (2021–2023)</li>
+    <li>IELTS — Certification of Completion (2023)</li>
+    <li>Omantel — Certification of Completion (2024)</li>
+    <li>Oman Data Park (ODP) — Certification of Completion (2025)</li>
+    <li>ORKI AI — Certification of Completion (2025)</li>
