--- a/index.html
+++ b/index.html
@@ -52,3 +52,18 @@
     <li>Omantel — Certification of Completion (2024)</li>
     <li>Oman Data Park (ODP) — Certification of Completion (2025)</li>
     <li>ORKI AI — Certification of Completion (2025)</li>
+    <li>Icons Oman — Digital Content Creator (2025)</li>
+  </ul>
+</section>
+
+<section id="resume">
+  <h2>Resume</h2>
+  <a class="btn" href="assets/resume.pdf" download>Download Resume</a>
+</section>
+
+<footer>
+  © 2026 Muayad Al Abduwani
+</footer>
+
+</body>
+</html>
