--- a/index.html
+++ b/index.html
@@ -1,69 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Muayad Al Abduwani</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
+
 <body>
+  <nav>
+    <div class="nav-inner">
+      <div class="logo">Muayad Al Abduwani <span>• Entrepreneur</span></div>
+      <ul>
+        <li><a href="#home" class="active">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#achievements">Achievements</a></li>
+        <li><a href="#resume">Resume</a></li>
+        <li>
+          <a href="https://www.linkedin.com/in/muayad-al-abduwani-b182b7265"
+             target="_blank" rel="noopener noreferrer">LinkedIn</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
-<nav>
-  <strong>Muayad Al Abduwani • Entrepreneur</strong>
-  <div>
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#achievements">Achievements</a>
-    <a href="#resume">Resume</a>
-    <a href="https://www.linkedin.com/in/muayad-al-abduwani-b182b7265" target="_blank">LinkedIn</a>
-  </div>
-</nav>
+  <!-- HERO -->
+  <section id="home" class="hero">
+    <div class="container center">
+      <h1><span>Build.</span> Evolve.</h1>
+      <p class="subtitle">Start now — let’s connect and grow.</p>
 
-<section id="home">
-  <h1><span>Build.</span> Evolve.</h1>
-  <p>Start now — let’s connect and grow.</p>
-  <a class="btn" href="assets/resume.pdf" download>View Resume</a>
-</section>
+      <div class="buttons">
+        <a href="assets/resume.pdf" class="btn primary" download>View Resume</a>
+        <a href="#contact" class="btn outline">Contact Me</a>
+      </div>
 
-<section id="about">
-  <h2>About</h2>
-  <img src="assets/profile.jpg" alt="Profile" class="profile">
-  <p>
-    I am a Computer Science student with a strong interest in artificial intelligence,
-    data-driven systems, and entrepreneurship.
-  </p>
-  <p>
-    I served as Head of the Sports Committee at the Omani Students Society in Cardiff,
-    leading initiatives that promote leadership, teamwork, and community engagement.
-  </p>
-  <p>
-    I am also a crypto enthusiast exploring blockchain technologies and decentralized systems.
-    I was awarded <strong>Icons Oman 2025</strong> for being a
-    <strong>Digital Content Creator</strong>.
-  </p>
-</section>
+      <div class="tags">
+        <span>Data Science</span>
+        <span>AI Engineer</span>
+        <span>AI Developer</span>
+        <span>Power BI</span>
+        <span>Canva</span>
+        <span>Machine Learning</span>
+        <span>Python</span>
+        <span>SQL</span>
+      </div>
+    </div>
+  </section>
 
-<section id="achievements">
-  <h2>Achievements & Certifications</h2>
-  <ul>
-    <li>IGCSE — Certification of Completion (2019–2021)</li>
-    <li>IB Diploma — Certification of Completion (2021–2023)</li>
-    <li>IELTS — Certification of Completion (2023)</li>
-    <li>Omantel — Certification of Completion (2024)</li>
-    <li>Oman Data Park (ODP) — Certification of Completion (2025)</li>
-    <li>ORKI AI — Certification of Completion (2025)</li>
-    <li>Icons Oman — Digital Content Creator (2025)</li>
-  </ul>
-</section>
+  <!-- ABOUT -->
+  <section id="about" class="section">
+    <div class="container narrow about-layout">
+      <div class="about-image">
+        <img src="assets/profile.jpg" alt="Muayad Al Abduwani">
+      </div>
 
-<section id="resume">
-  <h2>Resume</h2>
-  <a class="btn" href="assets/resume.pdf" download>Download Resume</a>
-</section>
+      <div class="about-text">
+        <h2>About</h2>
 
-<footer>
-  © 2026 Muayad Al Abduwani
-</footer>
+        <p>
+          I am a Computer Science student with a strong interest in artificial intelligence,
+          data-driven systems, and entrepreneurship.
+        </p>
 
+        <p>
+          I served as Head of the Sports Committee at the Omani Students Society in Cardiff,
+          leading initiatives that promote leadership, teamwork, and community engagement.
+        </p>
+
+        <p>
+          I am also a crypto enthusiast exploring blockchain technologies and decentralized systems.
+          I got awarded <strong>Icons Oman 2025</strong> for being a
+          <strong>Digital Content Creator</strong>.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- ACHIEVEMENTS -->
+  <section id="achievements" class="section">
+    <div class="container">
+      <h2>Achievements & Certifications</h2>
+
+      <div class="achievements-grid">
+        <div class="achievement-card">
+          <div class="ach-top">
+            <span class="ach-icon">🎓</span>
+            <div class="ach-title">
+              <h3>IGCSE</h3>
+              <p>Certification of Completion</p>
+            </div>
+          </div>
+          <div class="ach-date">2019 – 2021</div>
+        </div>
+
+        <div class="achievement-card">
+          <div class="ach-top">
+            <span class="ach-icon">📘</span>
+            <div class="ach-title">
+              <h3>IB Diploma</h3>
+              <p>Certification of Completion</p>
+            </div>
+          </div>
+          <div class="ach-date">2021 – 2023</div>
+        </div>
+
+        <div class="achievement-card">
+          <div class="ach-top">
+            <span class="ach-icon">📝</span>
+            <div class="ach-title">
+              <h3>IELTS</h3>
+              <p>Certification of Completion</p>
+            </div>
+          </div>
+          <div class="ach-date">2023</div>
+        </div>
+
+        <div class="achievement-card">
+          <div class="ach-top">
+            <span class="ach-icon">📡</span>
+            <div class="ach-title">
+              <h3>Omantel</h3>
+              <p>Certification of Completion</p>
+            </div>
+          </div>
+          <div class="ach-date">2024</div>
+        </div>
+
+        <div class="achievement-card">
+          <div class="ach-top">
+            <span class="ach-icon">🏢</span>
+            <div class="ach-title">
+              <h3>Oman Data Park (ODP)</h3>
+              <p>Certification of Completion</p>
+            </div>
+          </div>
+          <div class="ach-date">2025</div>
+        </div>
+
+        <div class="achievement-card">
+          <div class="ach-top">
+            <span class="ach-icon">🏢</span>
+            <div class="ach-title">
+              <h3>Oman Data Park (ODP)</h3>
+              <p>Certification of Completion</p>
+            </div>
+          </div>
+          <div class="ach-date">2025</div>
+        </div>
+
+        <div class="achievement-card">
+          <div class="ach-top">
+            <span class="ach-icon">🤖</span>
+            <div class="ach-title">
+              <h3>ORKI AI</h3>
+              <p>Certification of Completion</p>
+            </div>
+          </div>
+          <div class="ach-date">2025</div>
+        </div>
+
+        <div class="achievement-card highlight">
+          <div class="ach-top">
+            <span class="ach-icon">🏆</span>
+            <div class="ach-title">
+              <h3>Icons Oman</h3>
+              <p>Digital Content Creator</p>
+            </div>
+          </div>
+          <div class="ach-date">2025</div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- RESUME -->
+  <section id="resume" class="section center">
+    <div class="container narrow">
+      <h2>Resume</h2>
+      <p class="muted">Download my resume for full academic and professional details.</p>
+      <a href="assets/resume.pdf" class="btn primary" download>Download Resume</a>
+    </div>
+  </section>
+
+  <!-- CONTACT -->
+  <section id="contact" class="section center">
+    <div class="container narrow">
+      <h2>Contact</h2>
+      <p class="muted">📍 Oman · 📧 <a href="mailto:muayadabduwani@gmail.com">muayadabduwani@gmail.com</a></p>
+    </div>
+  </section>
+
+  <footer>
+    © 2026 Muayad Al Abduwani ·
+    <a href="https://www.linkedin.com/in/muayad-al-abduwani-b182b7265"
+       target="_blank" rel="noopener noreferrer">LinkedIn</a>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
